--- a/src/Random.CSharp/Random.CSharp.csproj
+++ b/src/Random.CSharp/Random.CSharp.csproj
@@ -6,7 +6,9 @@
     <RootNamespace>SFX.Random.CSharp</RootNamespace>
 
     <PackageId>SFX.Random.CSharp</PackageId>
-    <Version>1.0.4</Version>
+    <Version>$(Version)</Version>
+    <FileVersion>$(Version)</FileVersion>
+    <AssemblyVersion>$(Version)</AssemblyVersion>
     <IsPackable>true</IsPackable>
 
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
