--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -1,6 +1,9 @@
 name: .NET Core
 
-on: pull_request
+on:  
+    push:
+        branches-ignore:
+            - master
 
 jobs:
   build:
@@ -13,18 +16,9 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 3.1.100
-    - name: Build 
-      run: dotnet build --configuration Release
-    - name: Build C# NuGet Package
-      run: 
-        dotnet pack ./src/Random.CSharp/Random.CSharp.csproj --configuration Release -o ./nuget
-    - name: Build F# Nuget Package
-      run:
-        dotnet pack ./src/Random/Random.fsproj --configuration Release -o ./nuget
-    - name: Deploy C# NuGet Package 
-      run: 
-        dotnet nuget push /home/runner/work/SFX.Random/SFX.Random/nuget/SFX.Random.CSharp.*.nupkg -s https://api.nuget.org/v3/index.json -k ${{ secrets.NUGET_API_KEY }}
-    - name: Deploy F# NuGet Package
-      run:  
-        dotnet nuget push /home/runner/work/SFX.Random/SFX.Random/nuget/SFX.Random.*.nupkg -s https://api.nuget.org/v3/index.json -k ${{ secrets.NUGET_API_KEY }}
-
+    - name: Test
+      run: dotnet test ./SFX.Random.sln --configuration Release 
+    - name: Build NuGet Packages
+      run: dotnet pack ./SFX.Random.sln --configuration Release --include-symbols -p:SymbolPackageFormat=snupkg -o ./nuget
+    - name: Deploy NuGet Packages
+      run: dotnet nuget push /home/runner/work/SFX.Random/SFX.Random/nuget/SFX.Random*.nupkg -s https://api.nuget.org/v3/index.json -k ${{ secrets.NUGET_API_KEY }}
